--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "react-i18next": "^12.2.0",
     "react-icons": "^4.8.0",
     "react-router-dom": "^6.10.0",
-    "react-toggle-dark-mode": "^1.1.1"
+    "react-toggle-dark-mode": "^1.1.1",
+    "sass": "^1.62.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.27",
